# StyleClassifierApp

./: .gitignore  README.md  pyproject.toml
notebooks/: StylishDataModel.ipynb
