[tool.poetry]
name = "styleclassifierapp"
version = "0.1.0"
description = "Web application built in streamlit for art images classification"
authors = ["David Botero"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
torchvision = "^0.20.1"
torch = "^2.5.1"
transformers = "^4.47.1"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
